[package]
name = "spin_sleep"
version = "0.3.7"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Accurate sleeping. Only use native sleep as far as it can be trusted, then spin."
repository = "https://github.com/alexheretic/spin-sleep"
keywords = ["sleep"]
license = "Apache-2.0"
readme="README.md"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "mmsystem", "timeapi"] }
once_cell = "1"

[dev-dependencies]
approx = "0.3"

[features]
# Controls certain tests that are not deterministic
nondeterministic_tests = []
