[package]
name = "spin_sleep"
version = "1.1.1"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "Accurate sleeping. Only use native sleep as far as it can be trusted, then spin."
repository = "https://github.com/alexheretic/spin-sleep"
keywords = ["sleep"]
license = "Apache-2.0"
readme="README.md"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "mmsystem", "timeapi"] }
once_cell = "1"

[dev-dependencies]
approx = "0.5"
nix = { version = "0.27.1", features = ["time"] }
scheduler = "0.1.3"
sudo = "0.6.0"

[features]
# Controls certain tests that are not deterministic
nondeterministic_tests = []
