[package]
name = "spin_sleep"
version = "1.3.3"
edition = "2021"
authors = ["Alex Butler <alexheretic@gmail.com>"]
description = "Accurate sleeping. Only use native sleep as far as it can be trusted, then spin."
repository = "https://github.com/alexheretic/spin-sleep"
keywords = ["sleep"]
license = "Apache-2.0"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_Media",
] }

[dev-dependencies]
approx = "0.5"

[features]
# Controls certain tests that are not deterministic
nondeterministic_tests = []

[workspace]
members = ["util", "experiments"]
